--- a/src/__tests__/dune
+++ b/src/__tests__/dune
@@ -2,4 +2,5 @@
  (target test)
  (alias test)
  (libraries melange-moment melange-jest.jest)
- (preprocess (pps melange.ppx)))
+ (preprocess
+  (pps melange.ppx)))
