--- a/src/__tests__/dune
+++ b/src/__tests__/dune
@@ -1,6 +1,6 @@
 (melange.emit
  (target test)
  (alias test)
- (libraries melange-moment melange-jest.jest)
+ (libraries melange.belt melange-moment melange-jest.jest)
  (preprocess
   (pps melange.ppx)))
