leave mjs version as melange-moment

--- a/src/mjs/__tests__/dune
+++ b/src/mjs/__tests__/dune
@@ -1,7 +1,7 @@
 (melange.emit
  (target test)
  (alias test)
- (libraries melange-moment.mjs makeTests)
+ (libraries melange-moment makeTests)
  (preprocess
   (pps melange.ppx))
  (module_systems
